Some more styling

--- a/app/assets/stylesheets/elements/input.scss
+++ b/app/assets/stylesheets/elements/input.scss
@@ -4,5 +4,9 @@
   border: 0;
   border-radius: rythm(1);
   padding: rythm(2);
-  margin-top: rythm(2);
+  margin-bottom: rythm(2);
+}
+
+.e-input {
+  margin-top: rythm(0);
 }
