--- a/app/assets/stylesheets/utilities/general.scss
+++ b/app/assets/stylesheets/utilities/general.scss
@@ -12,15 +12,15 @@
   background-color: $heavy;
 }
 
-.u-margin--4 {
-  margin: 4px;
-}
-
-.u--margin-right-4 {
+.u-margin-right-4 {
   margin-right: 4px;
 }
 
-.u--margin-left-4 {
+.u-margin-right-8 {
+  margin-right: 8px;
+}
+
+.u-margin-left-4 {
   margin-left: 4px;
 }
 
