--- a/app/views/logged/cheatsheets/show.html.erb
+++ b/app/views/logged/cheatsheets/show.html.erb
@@ -4,7 +4,7 @@
     <ul class='e-unordered-list e-unordered-list-cheatsheet-change'>
       <% @group.cheatsheets.each do |cheatsheet| %>
         <li class="e-list-item">
-          <%= link_to cheatsheet.name, [@group, cheatsheet], class: 'e-link e-link-list u-margin--4' %>
+          <%= link_to cheatsheet.name, [@group, cheatsheet], class: 'e-link e-link-list u-margin-right-8' %>
         </li>
       <% end %>
     </ul>
