--- a/app/views/scenarios/_edit_scenario.html.erb
+++ b/app/views/scenarios/_edit_scenario.html.erb
@@ -1,6 +1,6 @@
 <%= scenario_form.text_field :content, class: 'e-input u-width--all' %>
 <%= scenario_form.rich_text_area :example %>
 <div class="o-wrapper-scenario-buttons-edit">
-  <%= scenario_form.submit 'Update', class: 'e-button e-button-submit u--margin-rigth-4' %>
-  <button data-action="click->edit-scenario#cancelEditing" } class='e-button e-button-submit u--margin-left-4'>Cancel</button>
+  <%= scenario_form.submit 'Update', class: 'e-button e-button-submit u-margin-rigth-4' %>
+  <button data-action="click->edit-scenario#cancelEditing" } class='e-button e-button-submit u-margin-left-4'>Cancel</button>
 </div>
