--- a/app/assets/stylesheets/components/input.scss
+++ b/app/assets/stylesheets/components/input.scss
@@ -4,7 +4,7 @@
   border: 0;
   border-radius: rythm(1);
   padding: rythm(2);
-  margin-bottom: rythm(2);
+  // margin-bottom: rythm(2);
 }
 
 .e-input {
