--- a/app/assets/stylesheets/objects/container.scss
+++ b/app/assets/stylesheets/objects/container.scss
@@ -1,12 +1,38 @@
 @import 'tools';
 
 .o-container {
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+.o-container--narrow {
+  max-width: 600px;
+}
+
+.o-grid {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.o-grid__item {
+  width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  align-self: center;
-  width: 100%;
-  max-width: 1400px;
+}
+
+.c-fields__item {
+  margin-bottom: 20px;
+}
+
+.c-fields--tight {
+  .c-fields__item {
+    margin-bottom: 10px;
+  }
+}
+
+.u-half {
+  width: 50%;
 }
 
 .o-container-nav {
