--- a/app/assets/stylesheets/components/image.scss
+++ b/app/assets/stylesheets/components/image.scss
@@ -1,15 +1,6 @@
 @import 'tools';
 
-.e-image-edit {
-  height: rythm(3);
-  width: rythm(3);
-}
-
-.e-image-scenario-add {
-  position: fixed;
-  height: rythm(6);
-  width: rythm(6);
-  right: rythm(2);
-  bottom: rythm(2);
-  cursor: pointer;
+.c-image__logo {
+  height: rythm(10);
+  width: rythm(9);
 }
