User forms styled

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,9 @@
 @import 'components/image';
 @import 'components/navbar';
 @import 'components/text';
+@import 'components/form';
+@import 'components/input';
+@import 'components/button';
 
 //  utilities -widths, sizes, active- basically anything that you want to lay on top of the component
 @import 'utilities/padding'
