--- a/app/assets/stylesheets/components/link.scss
+++ b/app/assets/stylesheets/components/link.scss
@@ -10,6 +10,10 @@
   text-align: center;
 }
 
+.c-link__password-recovery {
+  color: $dark;
+}
+
 .e-link-image-edit-animation {
   transition-property: margin-left;
   transition-duration: 0.5s;
