--- a/app/assets/stylesheets/objects/grid.scss
+++ b/app/assets/stylesheets/objects/grid.scss
@@ -3,16 +3,14 @@
   flex-wrap: wrap;
 }
 
-.o-grid__item {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-
 .o-grid--justify-end {
   justify-content: end;
 }
 
 .o-grid--justify-center {
   justify-content: center;
+}
+
+.o-grid--column {
+  flex-direction: column;
 }
