--- a/app/assets/stylesheets/components/input.scss
+++ b/app/assets/stylesheets/components/input.scss
@@ -1,12 +1,7 @@
 @import 'tools';
 
-.e-input {
+.c-input {
   border: 0;
   border-radius: rythm(1);
   padding: rythm(2);
-  // margin-bottom: rythm(2);
-}
-
-.e-input {
-  margin-top: rythm(0);
 }
