--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -1,6 +1,14 @@
-<h1 class="e-title">Reset Password</h1>
+<% content_for :container_classes, 'o-container--narrow' %>
 
-<%= form_with @user, :url => password_reset_path(params[:id]), class: 'e-form e-form-insert' do |f| %>
-  <%= f.password_field :password, placeholder: "new password", class: 'e-input' %> 
-  <%= f.submit 'Update password', class: 'e-button e-button-submit' %>
+<h1 class="c-text c-text__title">Reset Password</h1>
+
+<%= form_with @user, :url => password_reset_path(params[:id]), class: 'c-form' do |f| %>
+  <ol class="c-form_fields">
+    <li class="o-grid o-grid--column c-form_fields__item">
+      <%= f.password_field :password, placeholder: "new password", class: 'c-input' %> 
+    </li>
+    <li class="o-grid o-grid--column c-form_fields__item">
+      <%= f.submit 'Update password', class: 'c-button c-button-submit' %>
+    </li>
+  </ol>
 <% end %>
