--- a/app/assets/stylesheets/objects/grid.scss
+++ b/app/assets/stylesheets/objects/grid.scss
@@ -7,6 +7,10 @@
   justify-content: end;
 }
 
+.o-grid--justify-start {
+  justify-content: start;
+}
+
 .o-grid--justify-center {
   justify-content: center;
 }
