--- a/app/views/logged/shared/edit/_buttons.html.erb
+++ b/app/views/logged/shared/edit/_buttons.html.erb
@@ -1,19 +1,19 @@
 
-<div data-controller="edit-buttons" class="o-container-buttons-edit" >
-  <%= link_to image_tag('edit-icon.png', class: 'e-image-edit'),
+<div data-controller="edit-buttons" class="o-grid c-images-edit" >
+  <%= link_to image_tag('edit-icon.png', class: 'c-images-edit__image'),
     locals[:edit_path],
     data: {
      'edit-buttons-target': 'button'
-    }, class: 'e-link e-link-image e-link-image-edit e-link-image-edit-animation', id: 'edit'
+    }, class: 'c-link c-images-edit__image--animation', id: 'edit'
   %>
-  <%= link_to image_tag('delete-icon.png', class: 'e-image-edit'), 
+  <%= link_to image_tag('delete-icon.png', class: 'c-images-edit__image'), 
     locals[:delete_path], method: :delete, data: {
       confirm: "This action can not be undone, are you sure of this?", 'edit-buttons-target': 'button'
-    }, class: 'e-link e-link-image e-link-image-edit e-link-image-edit-animation', id: 'delete'
+    }, class: 'c-link c-images-edit__image--animation', id: 'delete'
   %>
   <%= content_tag :a, content_tag(:div, ""),
    data: { 
      action: 'click->edit-buttons#toggle', 'edit-buttons-target': 'button'
-    }, class: 'e-link e-link-image e-link-image-edit e-link-image-edit-animation u-link-image-edit-toggle--right', id: 'toggle'
+    }, class: 'c-link c-images-edit__image c-images-edit__image--animation c-link__list--right-arrow', id: 'toggle'
   %>
 </div>
