--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,7 @@
 @import 'components/form';
 @import 'components/input';
 @import 'components/button';
+@import 'components/list';
 
 //  utilities -widths, sizes, active- basically anything that you want to lay on top of the component
 @import 'utilities/padding'
