--- a/app/assets/stylesheets/components/link.scss
+++ b/app/assets/stylesheets/components/link.scss
@@ -20,8 +20,11 @@
   color: $dark;
   background-color: $lightest;
   border-radius: rythm(1);
+  min-width: rythm(40);
+}
+
+.c-list-items__item {
   margin-bottom: rythm(1);
-  min-width: rythm(40)
 }
 
 .c-link__list--left-arrow {
