--- a/app/views/logged/groups/edit.html.erb
+++ b/app/views/logged/groups/edit.html.erb
@@ -1,18 +1,26 @@
-<h1 class="e-title">Edit Group</h1>
-<%= form_with model: @group, method: :patch, local: true, class: 'e-form e-form-insert' do |form| %>
-  <%= form.text_field :name, class: 'e-input' %>
-  <h5 class="e-title">Select the cheatsheets to be in this group</h5>
-  <% if @cheatsheets.any? %>
-    <%= form.collection_check_boxes(:cheatsheet_ids, @cheatsheets, :id, :name) do |b| %>
-      <div>
-        <%= b.check_box %>
-        <%= b.label %>
-      </div>
-    <% end %>
-  <% else %>
-    <p>You haven't created any cheatsheet yet</p>
-  <% end %>
+<% content_for :container_classes, 'o-container--narrow' %>
 
-  <%= form.submit "Update cheatsheets for Group", class: 'e-button e-button-submit' %>
+<h1 class="c-text c-text__title">Edit Group</h1>
+
+<%= form_with model: @group, method: :patch, local: true, class: 'c-form' do |form| %>
+  <ol class="c-form_fields">
+    <li class="o-grid o-grid--column c-form_fields__item">
+      <%= form.text_field :name, class: 'c-input' %>
+    </li>
+    <% if @cheatsheets.any? %>
+      <h3 class="c-text c-text__title">Select the cheatsheets to be in this group</h3>
+      <%= form.collection_check_boxes(:cheatsheet_ids, @cheatsheets, :id, :name) do |b| %>
+        <li class="o-grid c-form_fields__item">
+          <%= b.check_box %>
+          <%= b.label %>
+        </li>
+      <% end %>
+      <li class="o-grid o-grid--column c-form_fields__item">
+        <%= form.submit "Update cheatsheets for Group", class: 'c-button c-button-submit' %>
+      </li>
+    <% else %>
+      <h3 class="c-text c-text__title">You haven't created any cheatsheet yet</h3>
+    <% end %>
+  </ol>
 <% end %>
 
