Small styled adjustments

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,7 @@
 @import 'components/list';
 
 //  utilities -widths, sizes, active- basically anything that you want to lay on top of the component
-@import 'utilities/padding'
+@import 'utilities/padding';
+@import 'utilities/margin';
 
 
