--- a/app/assets/stylesheets/utilities/margin.scss
+++ b/app/assets/stylesheets/utilities/margin.scss
@@ -3,3 +3,15 @@
 .u-margin__top--3 {
   margin-top: rythm(3);
 }
+
+.u-margin__bottom--1 {
+  margin-bottom: rythm(3);
+}
+
+.u-margin__left--1 {
+  margin-left: rythm(1);
+}
+
+.u-margin__right--1 {
+  margin-right: rythm(1);
+}
