--- a/app/views/scenarios/_new_scenario.html.erb
+++ b/app/views/scenarios/_new_scenario.html.erb
@@ -1,8 +1,8 @@
-<div data-add-scenario-target='form' class="o-container o-container-scenario o-wrapper-scenario u--salmon u--hidden">
+<div data-add-scenario-target='form' class="o-container o-grid o-grid--no-wrap c-card u-display__none">
   <%= form_with model: [cheatsheet, Scenario.new], local: true, url: "#{cheatsheet_scenarios_path(cheatsheet, Scenario.new)}?group_id=#{group&.id}",
-    method: :post, class: 'e-form e-form-scenario' do |form|  %>
-    <%= form.text_field :content, class: 'e-input', placeholder: 'content for new scenario' %>
-    <%= form.rich_text_area :example %>
-    <%= form.submit 'Create', class: 'e-button e-button-submit' %>
+    method: :post, class: 'c-form' do |form|  %>
+      <%= form.text_field :content, class: 'c-input', placeholder: 'content for new scenario' %>
+      <%= form.rich_text_area :example, class: 'c-input u-margin__bottom--1' %>
+      <%= form.submit 'Create', class: 'c-button c-button-submit' %>
   <% end %>
 </div>
